# CMKL-RecommenderSystem

./: .gitattributes  README.md
Interface/ArticleApp/: package-lock.json  package.json
Interface/ArticleApp/src-tauri/: Cargo.toml  tauri.conf.json
Interface/ArticleApp/src-tauri/src/: database_interface.rs  lib.rs
Interface/ArticleApp/src-tauri/src/database_interface/: mod.rs  test.rs
Interface/ArticleApp/src-tauri/src/python_interface/: mod.rs  test.rs
Interface/ArticleApp/src/lib/components/: FadeHover.svelte
Interface/ArticleApp/src/routes/: +page.svelte  SearchIcon.svelte
Interface/ArticleApp/src/routes/article/[id]/: +page.svelte  +page.ts
System/: demo_search.py  prepare.py  prepare_dataset.py  search.py
System/Embedding/: article_index_ids.npy  output_top_ten.sql  recommender.py  searchRec.py  sqlTransformer.py
System/WebScraping/: test_scrap.py  web_scrap.ipynb
System/demo/: demo_search.py
interface/ArticleApp/: .taurignore
interface/ArticleApp/src/: app.html
interface/ArticleApp/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
interface/ArticleApp/src-tauri/proto/: system_backend.proto
interface/ArticleApp/src-tauri/src/: lib.rs  main.rs
interface/ArticleApp/src-tauri/src/backend_interface/: mod.rs  test.rs
interface/ArticleApp/src/lib/components/: BackIcon.svelte  SearchIcon.svelte
interface/ArticleApp/src/routes/: +page.svelte
interface/ArticleApp/src/routes/article/[id]/: +page.svelte
system/: compile_proto.sh  prepare_dataset.py  requirements.txt  run_as_backend.py  search.py
system/datasets/prepared/: article_ids.pkl  usearch_index.usearch
system/legacy/: create_similarity_table.py
system/proto/: system_backend_pb2.py  system_backend_pb2_grpc.py
system/stand_alone_demo/: demo_search.py
