[package]
name = "article_app"
version = "0.1.0"
description = "An article reading app with a built-in recommendation system"
authors = ["Jira Pit"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "article_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.97"
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
prost = "0.13.1"
tokio-stream = "0.1.17"
tokio = { version = "1.44.2", features = ["full"] }
